test_files/positive/stream/indirect-length.stats
Version : 1.5
Incremental updates : 0
Neither updates nor object streams nor free objects nor encryption
Object count : 7
Filter : Raw -> 1 times
Objects of known type : 6
Known type rate : 0.857143
Graph has no known error
