test_files/negative/outlines/cycle.stats
Version : 1.5
Incremental updates : 0
Neither updates nor object streams nor free objects nor encryption
Object count : 11
Filter : Raw -> 2 times
Objects of known type : 11
Known type rate : 1.000000
All types were fully checked
PDF error : Graph error : Cyclic tree structure for object 9 !
